<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".UI.main.Fragments.ContactFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F9F9F9"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="#584F4F"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/gmail_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="32dp"
                    android:layoutDirection="ltr"
                    android:src="@drawable/ic_email_black_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/gmail_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:layoutDirection="ltr"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary"
                    android:textDirection="ltr"
                    app:layout_constraintBottom_toBottomOf="@+id/gmail_icon"
                    app:layout_constraintStart_toEndOf="@id/gmail_icon"
                    app:layout_constraintTop_toTopOf="@id/gmail_icon" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@android:color/white"
                    app:layout_constraintEnd_toEndOf="@+id/gmail_text"
                    app:layout_constraintStart_toStartOf="@+id/gmail_text"
                    app:layout_constraintTop_toBottomOf="@id/gmail_icon" />

                <ImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="16dp"
                    android:layoutDirection="ltr"
                    android:src="@drawable/ic_local_phone_black_24dp"
                    app:layout_constraintEnd_toEndOf="@id/gmail_icon"
                    app:layout_constraintStart_toStartOf="@id/gmail_icon"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <TextView
                    android:id="@+id/linkedin_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:layoutDirection="ltr"
                    android:text="@string/phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary"
                    android:textDirection="ltr"
                    app:layout_constraintBottom_toBottomOf="@id/phone_icon"
                    app:layout_constraintStart_toStartOf="@id/gmail_text"
                    app:layout_constraintTop_toTopOf="@id/phone_icon" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            app:cardBackgroundColor="#584F4F"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/note"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@android:color/white"
                    app:layout_constraintEnd_toEndOf="@id/note"
                    app:layout_constraintStart_toStartOf="@id/note"
                    app:layout_constraintTop_toBottomOf="@id/note" />

                <TextView
                    android:id="@+id/update_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/updating_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginStart="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="56dp"
            android:layout_weight="30"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ministry_burned" />

                <TextView
                    android:id="@+id/hot_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/hot_line"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="#fff"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hot_line_15335"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_horizontal"
                    android:text="@string/_15335"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="#A5D6A7"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="@id/hot_line"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/hot_line" />

                <TextView
                    android:id="@+id/hot_line_105"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/_105"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="#A5D6A7"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="@id/hot_line_15335"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintTop_toBottomOf="@id/hot_line_15335" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="103dp"
            android:layout_marginEnd="103dp"
            android:background="@drawable/rect_back"
            android:fontFamily="serif-monospace"
            android:layoutDirection="ltr"
            android:text="STAY\nHOME"
            android:textColor="#fff"
            android:textSize="80sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>